syntax = "proto3";

package contract;

option go_package = "./";

service FileManager {
  rpc GetFiles(GetFilesReq) returns (GetFilesResp);
  rpc SaveFile(SaveFileReq) returns (SaveFileResp);
  rpc DeleteFile(DeleteFileReq) returns (DeleteFileResp);
  rpc RenameFile(RenameFileReq) returns (RenameFileResp);
}

message Identifier {
  string Username = 1;
  string Folder = 2;
}
message File {
  string HashSum = 1;
  string FileName = 2;
  int64 SizeFile = 3;
  int64 ModTime = 4;
  string Client = 5;
}
message FullFile {
  int64 FileId = 1;
  bool Removed = 2;
  int32 State = 3;
  string VirtualName = 4;
  int64 OwnerId = 5;
  File File = 6;
}

message GetFilesReq {
  Identifier Identifier = 1;
  int64 OwnerId = 2;
  int64 FileId = 3;
}
message GetFilesResp {
  repeated FullFile FullFiles  = 1;
}

message SaveFileReq {
  Identifier Identifier = 1;
  File File = 2; 
}
message SaveFileResp { 
  int64 Id = 1;
}

message DeleteFileReq {
  Identifier Identifier = 1;
  string FileName = 2;
  string Client = 3;
}
message DeleteFileResp {
}

message RenameFileReq {
  Identifier Identifier = 1;
  string OldFileName = 2;
  string NewFileName = 3;
  string Client = 4;
}
message RenameFileResp {
}

service OwnerManager {
  rpc CreateOwner(CreateOwnerReq) returns (CreateOwnerResp);
  rpc DeleteOwner(DeleteOwnerReq) returns (DeleteOwnerResp);
}

message CreateOwnerReq {
  string Username = 1;
  string Folder = 2;
}
message CreateOwnerResp {
  int64 Id = 1;
}

message DeleteOwnerReq {
  int64 Id = 1;
}
message DeleteOwnerResp {}